--- a/style.css
+++ b/style.css
@@ -36,26 +36,125 @@ header nav {
 
 header nav p {
     margin-right: 30px;
-
 }
 
 header nav div:not(:last-child) {
     margin-right: 18px;
 }
 
-input {
+nav input {
     width: 132px;
     height: 44px;
     border: 1px solid #FB8F1D;
     border-radius: 8px;
     text-align: center;
     color: #FB8F1D;
-
 }
 
-button {
+nav button {
     width: 132px;
     height: 44px;
     background: #FB8F1D;
+    color: #FFFFFF;
     border-radius: 8px;
+    border: 0.8px solid #FFFF;
+}
+
+.section-one {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 134px;
+}
+
+h1 {
+    margin-bottom: 74px;
+}
+
+input {
+    width: 220px;
+    height: 52px;
+    border: 0.8px solid #AFB0B9;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.input-one {
+    margin-top: 74px;
+}
+
+.input-two {
+    margin-top: 30px;
+}
+
+section button {
+    width: 180px;
+    height: 52px;
+    color: #FFFFFF;
+    background: #FB8F1D;
+    border-radius: 8px;
+    border: 0.8px solid #FFFF;
+    margin-top: 47px;
+}
+
+.img-section1 {
+    background-image: url(./assets/thousand-01\ 1.svg);
+    width: 506px;
+    height: 483px;
+    background-repeat: no-repeat;
+}
+
+.section-two {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 200px;
+    margin-bottom: 292px;
+}
+
+.img-section2 {
+    background-image: url(./assets/Thousand-02\ 1.svg);
+    width: 1759px;
+    height: 580px;
+    background-repeat: no-repeat;
+}
+
+h2 {
+    margin-bottom: 20px;
+}
+
+.section-three-text {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-three-img {
+    display: flex;
+    justify-content: space-around;
+}
+
+.img-section3-one {
+    background-image: url(./assets/image\ 4.png);
+    width: 450px;
+    height: 350px;
+    background-repeat: no-repeat;
+}
+
+.img-section3-two {
+    background-image: url(./assets/Screen\ Shot\ 2020-02-14\ at\ 4.36\ 1.png);
+    width: 450px;
+    height: 350px;
+    background-repeat: no-repeat;
+}
+
+.img-section3-three {
+    background-image: url(./assets/Screen\ Shot\ 2020-02-15\ at\ 11.04\ 1.png);
+    width: 450px;
+    height: 350px;
+    background-repeat: no-repeat;
+}
+
+.img-section3-four {
+    background-image: url(./assets/Screen\ Shot\ 2020-02-15\ at\ 11.10\ 1.png);
+    width: 450px;
+    height: 350px;
+    background-repeat: no-repeat;
 }
